--- a/Week 5/chap10.ipynb
+++ b/Week 5/chap10.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "formal-context",
    "metadata": {
     "tags": []
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "progressive-typing",
    "metadata": {
     "tags": []
@@ -93,12 +93,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "usual-penguin",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded World_population_estimates.html\n"
+     ]
+    }
+   ],
    "source": [
     "download('https://raw.githubusercontent.com/AllenDowney/' +\n",
     "         'ModSimPy/master/data/World_population_estimates.html')"
@@ -106,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "thick-lincoln",
    "metadata": {
     "tags": []
@@ -118,7 +126,7 @@
        "6"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "conscious-orange",
    "metadata": {
     "tags": []
@@ -297,7 +305,7 @@
        "-6000                NaN              NaN  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "thick-blanket",
    "metadata": {
     "tags": []
@@ -344,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "ranking-prescription",
    "metadata": {
     "tags": []
@@ -367,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "metallic-offense",
    "metadata": {
     "scrolled": false,
@@ -413,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "solar-action",
    "metadata": {},
    "outputs": [
@@ -446,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "rural-express",
    "metadata": {
     "tags": []
@@ -462,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "preceding-sheep",
    "metadata": {
     "tags": []
@@ -475,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "together-jackson",
    "metadata": {},
    "outputs": [
@@ -506,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "61f3b2bb",
    "metadata": {},
    "outputs": [
@@ -528,6 +536,7 @@
     "\n",
     "xs = linspace(1940, 2020)\n",
     "ys = 110 + 200000 / (2040 - xs)\n",
+    "\n",
     "plot(xs, ys/1000, color='gray', label='model')\n",
     "\n",
     "decorate(xlim=[1940, 2021], xlabel='Year', \n",
