--- a/FINAL PROJECT/final_project_JBurns.ipynb
+++ b/FINAL PROJECT/final_project_JBurns.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -101,21 +101,17 @@
     "    \"\"\"Draws nodes on the given axes with increased text size and padding.\"\"\"\n",
     "    for node, (x, y) in nodes.items():\n",
     "        ax.text(x, y, node, ha='center', va='center', \n",
-    "                fontsize=14,  # Increase font size for better readability\n",
-    "                bbox=dict(facecolor='white', edgecolor='black', boxstyle='round,pad=0.5'))  # Increase padding to fit larger text\n",
-    "\n",
+    "                fontsize=14,  # Increase font size\n",
+    "                bbox=dict(facecolor='white', edgecolor='black', boxstyle='round,pad=0.5'))\n",
     "def draw_edges(ax, nodes, edges):\n",
     "    \"\"\"Draws edges between nodes on the given axes.\"\"\"\n",
     "    for start, end in edges:\n",
     "        start_pos, end_pos = nodes[start], nodes[end]\n",
     "        draw_arrow(ax, start_pos, end_pos)\n",
     "\n",
-    "# Main code\n",
     "if __name__ == \"__main__\":\n",
-    "    # Setup figure\n",
+    "  \n",
     "    fig, ax = setup_figure()\n",
-    "\n",
-    "    # Define nodes and their positions\n",
     "    nodes = {\n",
     "        'Start Simulation': (1, 11),\n",
     "        'Initialize Environment': (3, 10),\n",
@@ -129,7 +125,6 @@
     "        'End Simulation': (9, 2)\n",
     "    }\n",
     "\n",
-    "    # Define edges between nodes\n",
     "    edges = [\n",
     "        ('Start Simulation', 'Initialize Environment'),\n",
     "        ('Initialize Environment', 'Create Traffic Light'),\n",
@@ -143,11 +138,8 @@
     "        ('End Day', 'End Simulation')\n",
     "    ]\n",
     "\n",
-    "    # Draw nodes and edges\n",
     "    draw_nodes(ax, nodes)\n",
     "    draw_edges(ax, nodes, edges)\n",
-    "\n",
-    "    # Display the flowchart\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
    ]
@@ -225,7 +217,7 @@
     "            accident_prob *= (1 - IMPROVEMENT_RATE)\n",
     "        if random.random() < accident_prob:\n",
     "            self.accidents += 1\n",
-    "            self.daily_accidents[current_day] += 1  # Increment today's accidents\n",
+    "            self.daily_accidents[current_day] += 1\n",
     "\n",
     "def car(env, traffic_light, current_day):\n",
     "    # Simulate the 30% chance of leaving the house and going through the intersection\n",
@@ -249,7 +241,7 @@
     "    env.run(until=SIMULATION_TIME)\n",
     "    return traffic_light.daily_accidents\n",
     "\n",
-    "# Run simulations and calculate running total of accidents\n",
+    "#Using these to plot the sudo times series\n",
     "accidents_without_left_turn_light = run_simulation(False)\n",
     "accidents_with_left_turn_light = run_simulation(True)\n",
     "\n",
@@ -289,13 +281,12 @@
     "import pandas as pd\n",
     "plt.figure(figsize=(10, 6))\n",
     "no_light_df = pd.DataFrame(accidents_without_left_turn_light, columns=['accidents_without_left_turn_light'])\n",
-    "# Create the histogram\n",
+    "\n",
     "plt.hist(no_light_df['accidents_without_left_turn_light'], bins=4, alpha=0.75)\n",
     "plt.xlabel('Accidents Per Day')\n",
     "plt.ylabel('Frequency')\n",
     "plt.title('Accidents Per Day Without Left Turn Light')\n",
     "\n",
-    "# Display the plot\n",
     "plt.show()"
    ]
   },
@@ -332,11 +323,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### 4.  Justify the validity of the model and discuss how you verified it."
    ]
@@ -357,7 +343,7 @@
     "* Driving by this intersection a countless amount of times, it still baffles me that any saftey measure hasnt been installed. The reality is, there is a very real chance that someone within the year gets injured or fatally hurt in this intersection, proposing left turn lights could limit the chance of this happening multifold.\n",
     "\n",
     "Further research:\n",
-    "I realize that there is still a lot of work that could be put into this model that would make it more dynamic. One piece I considered adding was a control for seasonality since Massachuessetts winters make it far more dangerous to drive. Another piece for further research could be looking into peak traffic times, where the morning and evening commutes raise your likelyhood of being in a car crash."
+    "I realize that there is still a lot of work that could be put into this model that would make it more dynamic. One piece I considered adding was a control for seasonality since Massachusetts winters make it far more dangerous to drive. Another piece for further research could be looking into peak traffic times, where the morning and evening commutes raise your likelyhood of being in a car crash."
    ]
   },
   {
